Put legend item in filter component.

--- a/src/app/components/legend/legend-item/legend-item.component.html
+++ b/src/app/components/legend/legend-item/legend-item.component.html
@@ -1,4 +1,4 @@
-<div class="legend-item" [ngStyle]="{'width': !benefits ? '400px': 'auto'}">
+<div class="legend-item">
   <div [ngStyle]="{'background-color': color, 'margin-right': benefits ? '0':'10px'}" class="colored">{{text}}</div>
   <div *ngIf="!benefits">{{solutionBenefit}}</div>
 </div>
