fix radius of product card.

--- a/src/app/components/products/product-card/product-card.component.scss
+++ b/src/app/components/products/product-card/product-card.component.scss
@@ -21,7 +21,7 @@
 
   .product-header {
     position: relative;
-    border-radius: 15px 15px 15px 15px;
+    border-radius: 15px 15px 0 0;
     overflow: hidden;
 
     img {
