--- a/src/app/components/legend/legend-item/legend-item.component.scss
+++ b/src/app/components/legend/legend-item/legend-item.component.scss
@@ -5,6 +5,9 @@
 
   .colored {
     padding: 10px;
+    @media screen and (max-width: 768px) {
+      padding: 7px;
+    }
     border-radius: 50%;
     color: white;
     width: 20px;
