--- a/src/app/components/products/product-card/product-card.component.scss
+++ b/src/app/components/products/product-card/product-card.component.scss
@@ -1,18 +1,17 @@
 @import "../../../../assets/variables";
 
 .product-container {
-  //width: 100%;
-  border-radius: 15px 15px 15px 15px;
+  border-radius: 5px;
   max-width: 300px;
-  box-shadow: 7px 7px 21px -5px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
   display: flex;
   flex-direction: column;
-  //margin-bottom: 30px;
   transition: all .2s ease-in-out;
   position: relative;
   overflow: hidden;
   flex: 1 1 33.33%;
   margin: 0 5px 30px 5px;
+  display: flex;
 
   &:hover {
     transform: scale(1.025);
@@ -21,8 +20,9 @@
 
   .product-header {
     position: relative;
-    border-radius: 15px 15px 0 0;
+    border-radius: 5px 5px 0 0;
     overflow: hidden;
+    flex: 2;
 
     img {
       height: auto;
@@ -36,52 +36,61 @@
       top: 0;
       left: 0;
       margin: 20px;
+      border-radius: 4px;
 
-      .label {
-        box-shadow: 0 0 3px #ccc;
-        text-align: center;
-        border-radius: 4px;
-        color: white;
-        text-transform: uppercase;
-        font-weight: bold;
-        padding: 5px;
-        margin: 0 5px;
-        background-color: $main-color;
-
-        &.BOTTLE_WASHERS {
-          margin: 5px 0;
-          background-color:$main-color;
+      .outer-span {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        span {
+          background-color: $main-color;
+          line-height: 1.5em;
+          color: white;
+          text-align: left;
+          padding: 2px;
+          margin-bottom: 3px;
+          text-transform: uppercase;
+          &:first-of-type {
+            border-radius: 4px 0 0 4px;
+            @media screen and (min-width: 768px) {
+              padding-left: 4px;
+            }
+          }
+          &:last-of-type {
+            border-radius: 0 4px 4px 0;
+            @media screen and (min-width: 768px) {
+              padding-right: 4px;
+            }
+          }
         }
-
-        &.FILLERS {
-          margin: 5px 0;
-          background-color: $filler-color;
-        }
-
-        &.OTHERS {
-          margin: 5px 0;
-          background-color: $others-color;
-        }
-
       }
     }
-
   }
 
   .product-content {
     padding: 5px;
-    min-height: 100px;
-    max-height: 100px;
-    text-align: center;
+    height: 75px;
     overflow: hidden;
     text-overflow: ellipsis;
+    margin-top: -5px;
+    box-sizing: border-box;
+    background-color: $footer-color;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 
-    h2 {
-      margin-left: 20px;
-      text-align: left;
-      font-size: 1.5em;
-      margin-top: 0;
-      color: $main-color;
+    .suitable-for {
+      font-size: 12px;
+      text-transform: uppercase;
+    }
+
+    ul {
+      margin-block-start: 0;
+      margin-block-end: 0;
+      list-style-type: square;
+      li {
+        font-weight: bold;
+      }
     }
 
     p {
@@ -95,5 +104,6 @@
     text-align: center;
     padding:  10px;
     box-shadow: 0 0 3px #ccc;
+    flex: 1;
   }
 }
