--- a/src/app/components/slide-side-navigation/slide-side-navigation.component.scss
+++ b/src/app/components/slide-side-navigation/slide-side-navigation.component.scss
@@ -3,25 +3,27 @@
 section#slide-side-navigation{
   display: flex;
   position: fixed;
-  right: 0;
+  left: 0;
   top: 50%;
   transform: translateY(-50%);
   background-color: white!important;
-  z-index: 1000;
+  z-index: 100;
+  height: 100%;
+
 
   span.slide-out-button{
     position:absolute;
     top: 50%;
     transform: translateY(-50%);
     flex-direction: row;
-    left: -25px;
+    right: -25px;
     background-color: $main-color;
     border-radius: 50%;
     height: 75px;
     width: 75px;
     text-align: center;
     display: inline-flex;
-    justify-content: flex-start;
+    justify-content: flex-end;
     align-items: center;
     cursor: pointer;
     z-index: 1000;
@@ -29,7 +31,7 @@ section#slide-side-navigation{
     &.open{
       height: 50px;
       width: 50px;
-      left: -35px;
+      right: -35px;
       justify-content: center;
     }
     mat-icon{
@@ -44,6 +46,9 @@ section#slide-side-navigation{
 
 
   .content{
+    height: 100%;
+    overflow-x: hidden;
+    overflow-y: scroll;
     max-width: 0;
     transition: all ease-in-out .2s ;
     z-index: 2;
