--- a/src/styles.scss
+++ b/src/styles.scss
@@ -47,43 +47,35 @@ h1, h2, h3 {
   }
 }
 
-.article {
-  padding: 2% 10%;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
+//article
+.article{
+  max-width: 100%;
   background-color: white;
-  text-align: center;
-
-  &.image-banner {
-    min-height: 25vh;
-    max-height: 25vh;
-    img {
-      min-height: 100%;
-      margin: 10px 0;
-      min-width: 100%;
-      display: block;
-    }
+  h2{
+      color: $main-color;
   }
 
-  &.image-text {
-    @media screen and (max-width: 768px) {
-      .content {
-        order: 1;
+  &:nth-child(odd) {
+      background-color: #F7F8F9;
+      img{
+          order: 1;
       }
-      img {
-        order: 2;
-        margin-bottom: 20px;
-      }
-    }
-    img {
-      display: block;
-      width: 100%;
-    }
   }
 
-  &:nth-child(even) {
-    background-color: $card-background-color;
+  .content{
+      margin: 10px;
+      text-align: center;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      position: relative;
+
+      img{
+          display: block;
+          margin: 2% 0;
+          max-height: 25vh; 
+      }
   }
 
   .logo-history {
@@ -103,7 +95,76 @@ h1, h2, h3 {
     }
   }
 
+  &.image-banner{
+    img{
+      width: 100%;
+      height: 25vh;
+      display: block;
+    }
+  }
 }
+
+@media (min-width: 768px) {
+  .article{
+      &:nth-child(odd) {
+          .content{
+              img{
+                  margin: 0 0 0 2%;
+              }
+          }   
+      }
+      .content{
+          margin: unset;
+          padding: 2% 10%;
+          display: flex;
+          flex-direction: row;
+          align-items: center;
+          text-align: left;
+          position: relative;
+          .paragraph{
+              flex: 2;
+              text-align: left;
+              min-width: 75%;
+          }
+          img {
+              display: block;
+              max-height: 25vh; 
+              max-width: 25%;
+              width: 100%; 
+              object-fit: contain;
+              margin: 0 2% 0 0;
+          }
+      }
+      .logo-history {
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+    
+        img {
+          display: block;
+          margin: 0 auto;
+          margin-bottom: 0px !important;
+        }
+      }
+  }
+}
+
+@media (min-width: 1280px) {
+  .article{
+    display: flex;
+    justify-content: center;
+    .content{
+      max-width: 800px;
+    }
+
+    &.image-banner{
+      img{
+        max-width: 800px;
+      }
+    }
+  }
+}
+
 
 .active-link {
   color: $main-color !important;
@@ -223,39 +284,42 @@ h2 {
 }
 
 @media (min-width: 768px) {
-  .article {
-    text-align: left;
-    &.image-text {
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-      text-align: left;
-      img {
-        display: inline-block;
-        float: right;
-        margin-right: 20px;
-        width: 50%;
-        max-height: 25vh;
-      }
-    }
-    &:nth-child(even) {
-      img {
-        display: inline-block;
-        margin-left: 20px;
-        margin-right: 0;
-      }
-    }
-    .logo-history {
-      flex-direction: row;
-      justify-content: space-between;
-      align-items: center;
+  // .article {
+  //   text-align: left;
+  //   .content{
+  //     max-width: 800px;
+  //   }
+  //   .image-text {
+  //     display: flex;
+  //     flex-direction: row;
+  //     align-items: center;
+  //     text-align: left;
+  //     img {
+  //       display: inline-block;
+  //       float: right;
+  //       margin-right: 20px;
+  //       width: 50%;
+  //       max-height: 25vh;
+  //     }
+  //   }
+  //   &:nth-child(even) {
+  //     img {
+  //       display: inline-block;
+  //       margin-left: 20px;
+  //       margin-right: 0;
+  //     }
+  //   }
+  //   .logo-history {
+  //     flex-direction: row;
+  //     justify-content: space-between;
+  //     align-items: center;
 
-      img {
-        display: block;
-        margin: 0 auto;
-        margin-bottom: 0px !important;
-      }
-    }
-  }
+  //     img {
+  //       display: block;
+  //       margin: 0 auto;
+  //       margin-bottom: 0px !important;
+  //     }
+  //   }
+  // }
 }
 
