--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -7,6 +7,13 @@ footer {
   flex-direction: column;
   align-items: center;
 
+  @media screen and (max-width: 768px) {
+    .logo {
+      display: flex;
+      justify-content: center;
+    }
+  }
+
   .footer-container {
     display: flex;
     flex-direction: row;
@@ -27,6 +34,7 @@ footer {
 
     @media screen and (min-width: 768px) {
       padding: 20px;
+      padding-left: 0;
       h2 {
         margin-top: 0;
         margin-bottom: 10px;
@@ -57,8 +65,6 @@ footer {
         flex: 1;
         display: flex;
         flex-direction: column;
-        align-items: center;
-        text-align: center;
       }
     }
 
@@ -90,7 +96,6 @@ footer {
   }
 
   img{
-    margin: auto;
     height: 50px;
     width: 50px;
 
