change common css.

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="page">
+<footer class="footer page">
   <div class="footer-container">
     <div class="logo">
       <img src="../../../assets/images/sticker_round.png" width="150px" height="150px">
@@ -40,5 +40,8 @@
         </tr>
       </table>
     </div>
+  </div>
+  <div class="copyright" *ngIf="!isMobile">
+    &copy; New Crown Service Partners NV/SA - 2019
   </div>
 </footer>
