remove hash from server

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -13,11 +13,11 @@
     <div *ngIf="!isMobile">
       <h2>Pages</h2>
       <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Service</a></li>
-        <li><a href="#">Products</a></li>
-        <li><a href="#">Stories</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a routerLink="/home">Home</a></li>
+        <li><a routerLink="/services">Service</a></li>
+        <li><a routerLink="/products">Products</a></li>
+        <li><a routerLink="/stories">Stories</a></li>
+        <li><a routerLink="/contact">Contact</a></li>
       </ul>
     </div>
     <div *ngIf="!isMobile">
