--- a/src/app/pages/landing/landing.page.scss
+++ b/src/app/pages/landing/landing.page.scss
@@ -7,6 +7,7 @@ section#landing-page {
   h2 {
     color: $main-color;
     font-size: $font-size-large;
+    text-transform: uppercase;
   }
 
   .animated {
