--- a/src/app/pages/landing/landing.page.html
+++ b/src/app/pages/landing/landing.page.html
@@ -1,109 +1,139 @@
 <section id="landing-page">
-
-    <div class="index-banner page" #banner>
-        <div class="welcome-text">
-            Global Experts in RGB
-        </div>
-        <div class="welcome-button" (click)="scrollToVision()">
-            More about us
-            <span class="icon ion-ios-arrow-forward"></span>
-        </div>
+  <div class="index-banner page" #banner>
+    <div class="welcome-text">
+      Global Experts in RGB
     </div>
+    <div class="welcome-button" (click)="scrollToVision()">
+      More about us
+      <span class="icon ion-ios-arrow-forward"></span>
+    </div>
+  </div>
 
-    <scroll-button [scrollDown]="scrollDown" (onScroll)="scroll()"></scroll-button>
+  <scroll-button
+    [scrollDown]="scrollDown"
+    (onScroll)="scroll()"
+  ></scroll-button>
 
-    <div #ourVision class="article">
-        <div class="content image-text">
-            <img src="../../../assets/images/default-placeholder.jpg">
-            <div class="image-text">
-                <h2>Restore beyond design performance</h2>
-                <p>NEW CROWN offers solutions to modernize and upgrade existing Returnable Glass Bottling equipment,
-                    not
-                    only to
-                    restore its nominal capacity, but also to meet all current standards in terms of sustainability,
-                    quality
-                    and
-                    safety.</p>
-            </div>
+  <div #ourVision class="article">
+    <div class="content image-text">
+      <img src="../../../assets/images/default-placeholder.jpg" />
+      <div class="image-text">
+        <h2>Restore beyond design performance</h2>
+        <p>
+          NEW CROWN offers solutions to modernize and upgrade existing
+          Returnable Glass Bottling equipment, not only to restore the nominal
+          capacity, but also to meet all current standards in terms of
+          sustainability, quality and safety. We specialize in bottle washers
+          and fillers, but you can also call upon us for
+        </p>
+        <ul>
+          <li>Craters and decraters</li>
+          <li>Palletizers and depalletizers</li>
+          <li>Bottle and crate conveyors</li>
+        </ul>
+
+        <h2>One stop shop</h2>
+        <p>
+          We have all needed engineering disciplines under our roof to offer
+          turn key solutions
+        </p>
+        <ul>
+          <li>Mechanical engineering</li>
+          <li>Electrical engineering</li>
+          <li>PLC Software programming</li>
+          <li>Service Engineering</li>
+          <li>
+            For every project we appoint one of our project engineers, who will
+            be in the lead and act as you sole point of contact.
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+
+  <div #whoWeAre class="article">
+    <div class="content">
+      <div class="image-text">
+        <h2>The origins of the crown</h2>
+        <p>
+          NEW CROWN Service Partners NV was founded in October 2017 by two
+          former employees and acquired the intellectual property and trade fund
+          of CROWN-BAELE, who was declared bankrupt a month before. This makes
+          NEW CROWN the sole official OEM of CROWN-BAELE parts and assemblies.
+        </p>
+        <p>
+          The name NEW CROWN was chosen to mark the inseparable connection with
+          the history of its illustrious predecessor yet indicating a new
+          business model and ambition in becoming the reference for upgrading
+          older equipment in the global RGB industry.
+        </p>
+        <div class="logo-history">
+          <div class="origin-photo">
+            <img
+              src="../../../assets/images/logo-historiek/historiek_logo_1.png"
+            />
+          </div>
+          <div class="origin-photo">
+            <img
+              src="../../../assets/images/logo-historiek/historiek_logo_2.png"
+            />
+          </div>
+          <div class="origin-photo">
+            <img
+              src="../../../assets/images/logo-historiek/historiek_logo_3.png"
+            />
+          </div>
+          <div class="origin-photo">
+            <img
+              src="../../../assets/images/logo-historiek/historiek_logo_4.png"
+            />
+          </div>
+          <div class="origin-photo">
+            <img
+              src="../../../assets/images/logo-historiek/historiek_logo_5.png"
+            />
+          </div>
         </div>
+      </div>
     </div>
+  </div>
 
-    <div #whoWeAre class="article">
-        <div class="content">
-            <div class="image-text">
-                <h2>The origins of the crown</h2>
-                <p>NEW CROWN Service Partners NV was founded in October 2017 by two former employees and acquired the
-                    intellectual property and trade fund of CROWN-BAELE, who was declared bankrupt a month before.
-                    This makes NEW CROWN the sole official OEM of CROWN-BAELE parts and assemblies.
-                </p>
-                <p>They took the name NEW CROWN to mark the inseparable connection with the history of its illustrious
-                    predecessor yet indicating a new business model and ambition in becoming the reference for
-                    upgrading
-                    older
-                    equipment in the global RGB industry.</p>
-            <div class="logo-history">
-                    <div class="origin-photo">
-                        <img src="../../../assets/images/logo-historiek/historiek_logo_1.png">
-                    </div>
-                    <div class="origin-photo">
-                        <img src="../../../assets/images/logo-historiek/historiek_logo_2.png">
-                    </div>
-                    <div class="origin-photo">
-                        <img src="../../../assets/images/logo-historiek/historiek_logo_3.png">
-                    </div>
-                    <div class="origin-photo">
-                        <img src="../../../assets/images/logo-historiek/historiek_logo_4.png">
-                    </div>
-                    <div class="origin-photo">
-                        <img src="../../../assets/images/logo-historiek/historiek_logo_5.png">
-                    </div>
-                </div>
-            </div>
-        </div>
+  <div #ourApproach class="article image-banner">
+    <img src="../../../assets/images/default-placeholder.jpg" />
+  </div>
+
+  <div class="article image-text">
+    <div class="content">
+      <img src="../../../assets/images/default-placeholder.jpg" />
+      <div class="image-text">
+        <h2>STRONG TEAM</h2>
+        <p>
+          The NCSP team is a great mix of seasoned experience and young
+          enthusiasm, of proven solutions and new technologies. We offer global
+          services, in Belgium, in Europe and outside, with a special knack for
+          Africa, where we have a longtime experience, and where we know we can
+          make a difference.
+        </p>
+      </div>
     </div>
+  </div>
 
-    <div #ourApproach class="article image-banner">
-        <img src="../../../assets/images/default-placeholder.jpg">
+  <div class="article image-text">
+    <div class="content">
+      <img src="../../../assets/images/default-placeholder.jpg" />
+
+      <div class="image-text">
+        <h2>
+          LAMBRECHTS GROUP AS A STRONG PARTNER
+        </h2>
+        <p>
+          NEW CROWN is proud to have a strategic partnership with LAMBRECHTS
+          GROUP, who has a long and successful track record as an equipment
+          manufacturer of kegging lines and industrial washing installations in
+          the brewery industry. The many synergies between NEW CROWN and
+          Lambrechts Group strengthens their positions on the market.
+        </p>
+      </div>
     </div>
-
-    <div class="article image-text">
-        <div class="content">
-            <img src="../../../assets/images/default-placeholder.jpg">
-            <div class="image-text">
-                <h2>STRONG TEAM</h2>
-                <p>
-                    The NCSP team is a great mix of seasoned experience and young enthusiasm, of proven solutions and
-                    new
-                    technologies. We offer global services, in Belgium, in Europe and outside, with a special knack for
-                    Africa,
-                    where we have a longtime experience, and where we know we can make a difference.
-                </p>
-            </div>
-        </div>
-    </div>
-
-    <div class="article image-text">
-        <div class="content">
-            <img src="../../../assets/images/default-placeholder.jpg">
-
-            <div class="image-text">
-                <h2>
-                    STRONG PARTNERSHIP
-                </h2>
-                <p>
-                    The ownership of NEW CROWN Service Partners NV is held by business partners Thomas Bernolet and
-                    Verney
-                    Poynton, and by strategic partner LAMBRECHTS GROUP. Lambrechts Group has a long and successful
-                    track
-                    record
-                    as an equipment manufacturer of kegging lines and industrial washing installations in the brewery
-                    industry.
-                    The many synergies between New Crown Service Partners and Lambrechts Group strengthens their
-                    positions
-                    on
-                    the market.
-                </p>
-            </div>
-        </div>
-    </div>
+  </div>
 </section>
