--- a/src/app/pages/services/services.component.html
+++ b/src/app/pages/services/services.component.html
@@ -1,24 +1,107 @@
 <section class="service-page">
-    <div class="banner">
-        <div class="content">
-            <h1>Services</h1>
-        </div>
+  <div class="banner">
+    <div class="content">
+      <h1>Services</h1>
     </div>
+  </div>
 
-    <div #whoWeAre class="article">
-        <div class="content">
-            <div class="image-text">
-                <h2>The origins of the crown</h2>
-                <p>NEW CROWN Service Partners NV was founded in October 2017 by two former employees and acquired the
-                    intellectual property and trade fund of CROWN-BAELE, who was declared bankrupt a month before.
-                    This makes NEW CROWN the sole official OEM of CROWN-BAELE parts and assemblies.
-                </p>
-                <p>They took the name NEW CROWN to mark the inseparable connection with the history of its illustrious
-                    predecessor yet indicating a new business model and ambition in becoming the reference for
-                    upgrading
-                    older
-                    equipment in the global RGB industry.</p>
-            </div>
-        </div>
+  <div class="article">
+    <div class="content">
+      <div class="image-text">
+        <h2>Service</h2>
+        <p>
+          When it comes to service, NEW CROWN your ideal partner. We put our
+          years of experience and expertise in RGB at the service of our
+          customers. You can rely on us for
+        </p>
+        <ul>
+          <li>Trouble shooting en root cause analysis</li>
+          <li>Fact finding / efficiëntie analyses</li>
+          <li>Machine audits</li>
+          <li>Repairs</li>
+          <li>Maintenance and revisions</li>
+          <li>Refurbishment</li>
+          <li>Upgrades</li>
+          <li>Training and hands-on training</li>
+        </ul>
+
+        <p>
+          Our service technicians will be on-site anywhere in the world, helping
+          you to get and keep your machines at level.
+        </p>
+      </div>
     </div>
+  </div>
+
+  <div class="article">
+    <div class="content">
+      <div class="image-text">
+        <h2>MAINTENANCE</h2>
+        <p>
+          In order to keep a machine in good working order, it is not sufficient
+          to make a revision once or twice a year. Maintenance is a daily duty.
+          During our interventions we always take the time to give your people a
+          thorough explanation about the maintenance of the machine involved and
+          explain to them what needs to be done and at what times. By always
+          doing this with your people hands-on, we do not only teach them what
+          to do, but they also understand why, and what the consequences of the
+          lack of maintenance can be.
+        </p>
+      </div>
+    </div>
+  </div>
+
+  <div class="article">
+    <div class="content">
+      <div class="image-text">
+        <h2>SERVICE LEVEL AGREEMENTS</h2>
+        <p>
+          We are happy to be your service partner, and we are not afraid to
+          fully commit ourselves to this. By concluding a lettuce with NEW
+          CROWN, you are not only sure of our undivided attention and good
+          worries, we also go that step further, and connect our destiny to
+          yours. After a period of exploration, we put together objectives that
+          we constantly monitor using carefully chosen KPIs. Service and
+          material costs are then included in the agreement. So you can
+          perfectly project your costs in short long term, for the machines you
+          entrust to us.
+        </p>
+      </div>
+    </div>
+  </div>
+
+  <div class="article">
+    <div class="content">
+      <div class="image-text">
+        <h2>Fast and flexible</h2>
+        <p>
+          Thanks to our light company structure and short lines of
+          communication, we can come in very quickly. By communicating
+          intensively with our customers we can act very flexibly, and we always
+          find an appropriate solution for your planned and unplanned
+          interventions.
+        </p>
+      </div>
+    </div>
+  </div>
+
+  <div class="article">
+    <div class="content">
+      <div class="image-text">
+        <h2>LOCAL PARTNERS</h2>
+        <p>
+          We are also always building on an international network of partners,
+          so that we can quickly and efficiently provide first-line service in
+          difficult-to-reach areas, without the burdens that international
+          travel entails, such as the Obtaining a visa, or an expensive flight.
+          Our local partners are also always involved in interventions in their
+          areas, with which we can not only reduce the costs for you, but
+          therefore they enjoy specific training for your needs, and can then
+          also provide the appropriate service. In addition, in many cases our
+          local partners also offer the possibility to act in local currency,
+          which is certainly an additional asset.
+        </p>
+      </div>
+    </div>
+  </div>
 </section>
